Fixed Quote Spacing

--- a/themes/political/style.css
+++ b/themes/political/style.css
@@ -670,7 +670,7 @@ p.notion-callout__content{
   font-size: 1em!important;
   width: 100% !important;
   margin: 1rem auto!important;
-  padding: 3em 3em 2em 3em!important;
+  padding: 1em 1em 2em 2em!important;
   border: 1px solid var(--color-border-default)!important;
   text-align: center!important;
   display: flex!important;
